# Lab-IA-1MTR56-Automatizacion-Industrial-Inteligente

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  datos.py  hmi.py  main.py  modelo.py  plc.py
app/ui/: pred_html.py  tab_datos.py  tab_hmi.py  tab_probar.py
data/tapitas/: AQUI_VAN_SUS_DATOS.txt
labs/: lab1_cnn_basica.ipynb  lab2_data_augmentation.ipynb  lab3_clasificacion_tapitas.ipynb  probador.ipynb
proyecto/: entrenar.ipynb  probador.ipynb
proyecto/modelos/: mobilenet_128px_val83_0304_1417.json
scripts/: capturar_clases.py  dividir_video.py  inferencia_plc.py  prueba_video.py  simular_plc.py
